# programming_2_coursework_2

./: Album.cpp  Album.h  CMakeLists.txt  Collection.cpp  Collection.h  Duration.cpp  Duration.h  Track.cpp  Track.h  main.cpp  output.txt.txt
